--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ body {
 .section-cover{
   display: flex;
   background-color: var(--main-text-color-dark);
-  /* background-color: black; */
 }
 
 .section-cover__info{
@@ -159,10 +158,13 @@ body {
 .project-cover__text{
   position: absolute;
   max-width: 285px;
-  top: -100px;
   z-index: 99;
   right: 60px;
   top: 266px;
+}
+
+.text-position-left{
+  left: 60px;
 }
 
 .project-cover p{
@@ -236,4 +238,56 @@ body {
   grid-template-rows: 1fr 1fr;
   gap: 96px;
   align-items: center;
+}
+
+.featured-projects{
+  padding: 100px 136px;
+  position: relative;
+  background-color: var(--bg-color-light);
+}
+
+.featured-projects__header{
+  font-size: 39px;
+  margin: 13px 0 15px;
+  line-height: 42px;
+}
+
+.featured-cover__paragraph{
+  font-size: 24px;
+  line-height: 30px;
+  color:var(--caption-color-light);
+  max-width: 581px;
+  margin: 0;
+}
+
+.featured-projects__image{
+  height: 456px;
+  width: 375px;
+  object-fit: cover;
+}
+
+.featured-projects__pictures{
+  display: flex;
+  padding: 2px;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.featured-projects__image-caption{
+  position: absolute;
+  top: 314px;
+  left: 573px;
+}
+
+.image-caption__paragraph{
+  font-size: 23px;
+  margin: 0;
+}
+
+.featured-projects .common-button{
+  text-align: center;
+  margin: 51px auto 0;
+  padding: 11px 20px;
+  display: block;
+  width: 180px;
 }
